# webfiction-scraper

./: .gitignore  Pipfile  README.md  client.py  monitor.py  pyproject.toml  requirements.txt  setup.py  webfictionscraper.py
configs/: Metaworld_Chronicles.yaml  TWI_Vol_1.yaml  TW_Vol_1.yaml  Test.yaml  Test_RR.yaml  The_Wandering_Inn_Vol_1.yaml  Wandering_Inn_Vol_1.yaml  Wandering_Inn_Vol_1_min.yaml  Wandering_Inn_Vol_2.yaml  Wandering_Inn_Vol_3.yaml  Wandering_Inn_Vol_4.yaml  Wandering_Inn_Vol_5.yaml  Wandering_Inn_Vol_6.yaml  Wandering_Inn_Vol_7.yaml
docs/: creating_configs.md
scraper/: __init__.py  binder.py  chapter_fixes.py  client.py  const.py  converter.py  crawler.py  exception.py  manifest.py  utils.py
scraper/configs/: Beware_of_Chicken.yaml  Gods_are_Bastards_Vol_1-4.yaml  Gods_are_Bastards_Vol_5.yaml  He_Who_Fights_with_Monsters_Vol_2.yaml  Journey_of_Black_and_Red.yaml  Kairos.yaml  Metaworld_Chronicles.yaml  Mother_of_Learning.yaml  Practical_Guide_Book_1-5.yaml  Practical_Guide_Book_5.yaml  Practical_Guide_Book_6.yaml  Practical_Guide_Book_7.yaml  Super_Minion.yaml  The_Perfect_Run.yaml  Underland.yaml  Wandering_Inn_Vol_1.yaml  Wandering_Inn_Vol_2.yaml  Wandering_Inn_Vol_3.yaml  Wandering_Inn_Vol_4.yaml  Wandering_Inn_Vol_5.yaml  Wandering_Inn_Vol_6.yaml  Wandering_Inn_Vol_7.yaml  Wandering_Inn_Vol_8.yaml  Wandering_Inn_Vol_9.yaml
scraper/crawler/: __init__.py  crawler.py  wandering_inn_patreon_crawler.py  wanderinginn_patreon_crawler.py
scraper/generator/: __init__.py  fiction_press.py  generator.py  royalroad.py
