[tool.poetry]
name = "WebFictionScraper"
version = "1.4.0"
description = ""
authors = ["Curetix <me@curetix.eu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/curetix/webfiction-scraper"
packages = [{include = "webfictionscraper.py"}, {include = "scraper/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
platformdirs = "^4.2.2"
EbookLib = "^0.18"
python-box = {extras = ["all"], version = "^7.1.1"}
questionary = "^2.0.1"
requests = "^2.32.3"
schema = "^0.7.7"

[tool.poetry.scripts]
webfictionscraper = "webfictionscraper:cli"

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
